--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -6,7 +6,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <img src="~/lib/images/logo.jpg" style="max-width: 200px;"></img>
+            <img src="~/lib/images/logo.jpg" />
         </div>
         @if (message != null)
         {
@@ -15,28 +15,38 @@
             </div>
         }
         <div class="login-box-body">
-            <p class="login-box-msg">Sign in</p>
-            <form>
-                <div class="form-group has-feedback" style="margin-bottom: 10px;">
-                    <input type="text" class="form-control" placeholder="Username" name="username" autocomplete="off"
+            <p class="login-box-msg">Login to
+                Valve Integrity Management System</p>
+            <p class="text-center">Input your Credential (Email and Password) to enter Web Application</p>
+            <form class="login-form">
+                <input id="timezone" type="hidden" name="timezone" required>
+                <div class="label">
+                    Email
+                </div>
+                <div class="form-group has-feedback">
+                    <input type="text" class="form-control" name="username" autocomplete="off"
                         required autofocus>
                     <span class="glyphicon glyphicon-user form-control-feedback"></span>
                 </div>
-                <div class="form-group has-feedback" style="margin-bottom: 10px;">
-                    <input type="password" class="form-control" placeholder="Password" name="password" required>
+                <div class="label">
+                    Password
+                </div>
+                <div class="form-group has-feedback">
+                    <input type="password" class="form-control" name="password" required>
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 </div>
+                <div class="label"></div>
                 <div class="form-group">
-                    <input id="timezone" type="hidden" name="timezone" required>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <button id="btn-signin" type="submit" class="btn btn-primary btn-block btn-flat">Sign
-                            In</button>
-                    </div>
+                    <button id="btn-signin" type="submit" class="btn btn-primary btn-login btn-block btn-flat">Login</button>
                 </div>
             </form>
+            <div class="copyright">
+                Copyright © 2023 Pertamina Hulu Energi. All rights reserved.
+            </div>
         </div>
+    </div>
+    <div class="login-image">
+
     </div>
 </body>
 
