--- a/Riskvalve/Views/Assessment/Index.cshtml
+++ b/Riskvalve/Views/Assessment/Index.cshtml
@@ -310,7 +310,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-10">
-                                        <div class="assessment-content-card card-group-valveproperties active">
+                                        <div class="assessment-content-card card-group-valveproperties first-in-group active">
                                             <div class="card-header">
                                                 Asset Information
                                             </div>
@@ -579,7 +579,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="assessment-content-card card-group-valveproperties active">
+                                        <div class="assessment-content-card card-group-valveproperties last-in-group active">
                                             <div class="card-header">
                                                 Assessment Information
                                             </div>
@@ -640,7 +640,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="assessment-content-card card-group-inspectionhistory">
+                                        <div class="assessment-content-card card-group-inspectionhistory first-in-group last-in-group">
                                             <div class="card-header">
                                                 Inspection History
                                             </div>
@@ -663,9 +663,9 @@
                                                 </table>
                                             </div>
                                         </div>
-                                        <div class="assessment-content-card card-group-maintenancehistory">
+                                        <div class="assessment-content-card card-group-maintenancehistory first-in-group last-in-group">
                                             <div class="card-header">
-                                                Maintenance  History
+                                                Maintenance History
                                             </div>
                                             <div class="card-content" style="min-height: 500px;">
                                                 <a class="btn btn-primary btn-maincolor mb-2 mt-4" onclick="addMaintenance(this)">Add Maintenance Data</a>
@@ -684,7 +684,7 @@
                                                 </table>
                                             </div>
                                         </div>
-                                        <div class="assessment-content-card card-group-riskassessment">
+                                        <div class="assessment-content-card card-group-riskassessment first-in-group">
                                             <div class="card-header">
                                                 Likelihood of Failure
                                             </div>
@@ -922,9 +922,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="assessment-content-card card-group-riskassessment">
+                                        <div class="assessment-content-card card-group-riskassessment last-in-group">
                                             <div class="card-header">
-                                                Consequence  of Failure
+                                                Consequence of Failure
                                             </div>
                                             <div class="card-content">
                                                 <div class="row">
@@ -951,7 +951,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="assessment-content-card card-group-riskmatrix">
+                                        <div class="assessment-content-card card-group-riskmatrix first-in-group last-in-group">
                                             <div class="card-header">
                                                 Risk
                                             </div>
@@ -1232,7 +1232,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="assessment-content-card card-group-integrityplan">
+                                        <div class="assessment-content-card card-group-integrityplan  first-in-group last-in-group">
                                             <div class="card-header">
                                                 Integrity Plan
                                             </div>
